--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "version": "0.0.0",
   "scripts": {
+    "test": "vitest",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@testing-library/vue": "^8.1.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "eslint": "^9.14.0",
     "eslint-plugin-import": "^2.29.1",
@@ -24,6 +26,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.4.0",
     "eslint-plugin-vue": "^9.30.0",
+    "happy-dom": "^16.6.0",
     "pinia": "^2.1.7",
     "sass": "1.77.8",
     "sass-embedded": "^1.77.8",
@@ -34,6 +37,7 @@
     "vite": "^5.4.0",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vite-plugin-vuetify": "^2.0.3",
+    "vitest": "^3.0.2",
     "vue-router": "^4.4.0"
   }
 }
